--- a/src/Components/Feedback/FeedBack.css
+++ b/src/Components/Feedback/FeedBack.css
@@ -7,14 +7,16 @@
   z-index: 9999999;
   font-size: 0.8em;
   display: flex;
-  bottom: 40px;
+  bottom: 3px;
 }
 
 .feedback_btn {
   width: 120px;
   padding: 11px 20px;
-  /* height: 40px; */
-  background: #2e58a6;
+  cursor: pointer;
+  background: #2e58a6 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border-radius: 0px 0px 10px 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,7 +38,7 @@
 }
 
 .feedback_content {
-    /* display: none; */
+  /* display: none; */
   width: 400px;
   height: max-content;
   background: white;
@@ -44,8 +46,13 @@
   padding: 1rem 1.8rem;
 }
 
-.feedback_btn:hover .feedback_content{
-    display: block !important;
+.feedback_content span,
+.feedback_content p {
+  font-weight: 500;
+}
+
+.feedback_btn:hover .feedback_content {
+  display: block !important;
 }
 
 .feedback_content p {
@@ -62,12 +69,44 @@
 }
 
 .feedback_content textarea {
-  width: 70%;
-  height: 76px;
+  width: 87%;
+  height: 82px;
   margin: 0 auto;
 }
 
 .feedback_content .home_form_btn {
   padding: 8px 35px;
   border-radius: 5px;
+}
+
+@media screen and (min-width: 1600px) {
+  .feedback_content {
+    width: 500px;
+  }
+  .feedback_content p,
+  .feedback_content span {
+    font-size: 1rem;
+  }
+  .feedback_content strong,
+  .feedback_content .home_form_btn {
+    font-size: 1.2rem;
+  }
+  .feedback_content textarea {
+    height: 112px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .feedback_content {
+    line-height: 14px;
+    width: 324px;
+  }
+}
+
+@media screen and (max-width: 442px) {
+  .feedback_content {
+    padding: 1rem;
+    width: 262px;
+    line-height: 12px;
+  }
 }
