--- a/src/Pages/Payment/Payment.css
+++ b/src/Pages/Payment/Payment.css
@@ -1,4 +1,3 @@
-
 /* form one  */
 
 .home_form_div_md {
@@ -6,7 +5,7 @@
   /* box-shadow: 0px 0px 10px rgb(202, 202, 202); */
   box-shadow: 0px 3px 10px #00000029;
   border-radius: 5px;
-  padding: 20px 20px;
+  padding: 20px 17px;
   padding-top: 17px;
   width: 398px;
   /* margin-left: -100px; */
@@ -68,7 +67,7 @@
   background-color: #f0f4fc;
   margin-top: 10px;
   color: #2e58a6;
-  opacity: 0.5;
+  opacity: 0.8;
   font-size: 0.8rem;
 }
 .seleCt_travel_mode > p {
@@ -106,7 +105,7 @@
   background-color: #2e58a6;
   color: white;
   text-align: center;
-  padding: 7px 35px;
+  padding: 10px 35px;
   outline: none;
   border: none;
   margin-top: 10px;
@@ -135,14 +134,14 @@
   color: #2e58a6;
 }
 
-
 .payment_wrapper {
   /* width: 90%; */
   margin: 0 auto;
 }
 
 .payment_wrapper .home_form_btn {
-  padding: 10px 25px;
+  padding: 13px 25px;
+  width: 100%;
 }
 
 .pay_option_text {
@@ -157,10 +156,10 @@
 
 .pay_option_1 {
   margin: 1rem 0;
-  border: 1.5px solid #2e58a6;
   color: #2e58a6;
-  padding: 7px 0;
-  border-radius: 5px;
+  padding: 10px 0;
+  background-color: #f0f4fc;
+  border-radius: 10px;
 }
 
 .pay_option_1 > div {
@@ -168,6 +167,12 @@
   padding: 0 10px;
   height: 14px;
   text-align: right;
+}
+
+.pay_option_2 > div img {
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
 
 .pay_option_1 h5 {
@@ -199,6 +204,8 @@
   color: #2e58a6;
   padding: 30px 10px;
   background: #f0f4fc;
+  position: relative;
+  border-radius: 10px;
 }
 
 .pay_option_2 h5 {
@@ -226,6 +233,10 @@
 
 .pay_options .button > img {
   width: 11px;
+}
+
+.pay_option_2.active_box {
+  padding: 30px 10px;
 }
 
 /* pay_method */
@@ -300,7 +311,6 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px 10px;
-  background: #f0f4fc;
 }
 
 .tr_details_2 span {
@@ -319,14 +329,20 @@
   width: 100%;
   padding: 10px 5px;
   margin: 0.5rem 0;
+  border-radius: 5px;
   height: max-content;
   display: flex;
   background: #f0f4fc;
+  cursor: pointer;
   justify-content: space-between;
 }
 
 .pay-text {
   color: #2e58a6;
+}
+
+.pay-text span {
+  font-size: 0.8rem;
 }
 
 .paypal_img {
@@ -338,6 +354,8 @@
   border: 1.5px solid #2e58a6;
   background: white !important;
   padding: 10px 5px;
+  border-radius: 5px;
+  box-shadow: 0px 3px 6px #00000029;
 }
 
 .paypal_box div:nth-of-type(1) img {
@@ -422,6 +440,7 @@
 .ps_input1 {
   width: 100%;
   display: flex;
+  margin-bottom: 10px;
   align-items: center;
   justify-content: space-between;
   height: max-content;
@@ -433,11 +452,11 @@
 
 .ps_input1 input {
   border: none;
-  background: transparent;
   color: #2e58a6;
   margin: 0;
   width: 100%;
   box-shadow: none;
+  background: transparent;
 }
 
 .ps_input1 img {
@@ -479,6 +498,11 @@
   align-items: center;
 }
 
+.check_box span {
+  color: #2e58a6;
+  font-size: 0.8rem;
+}
+
 .check_box input {
   width: 30px !important;
   box-shadow: none;
@@ -502,7 +526,7 @@
 
 .ps_text h2 {
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 700;
   color: #0a1433;
 }
 
@@ -616,12 +640,15 @@
 }
 
 .bank_select_options::-webkit-scrollbar-thumb {
-  background-color: #0075ff;
-  border-radius: 10px;
+  background: #2e58a6 0% 0% no-repeat padding-box;
+  border-radius: 20px;
+  opacity: 1;
 }
 
 .bank_select_options::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
+  background: #748aa629 0% 0% no-repeat padding-box;
+  opacity: 0.1;
+  border-radius: 20px;
 }
 
 /* paying_bank */
@@ -657,11 +684,12 @@
 }
 
 .auth_text p {
-  color: #000000;
+  color: #2e58a6;
   font-weight: 500;
 }
 
 .bank_auth p {
+  font-weight: 500;
   font-size: 0.8rem;
 }
 
@@ -672,12 +700,12 @@
   padding: 5px 15px;
 }
 
-.auth_tabs button:nth-of-type(1) {
+.auth_active_tab {
   background: #2e58a6;
   color: white;
 }
 
-.auth_tabs button:nth-of-type(2) {
+.auth_non_active_tab {
   background: #ebebeb;
   color: #000000;
 }
@@ -699,7 +727,7 @@
 
 .otp_text p {
   font-size: 0.8rem;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .otp_box {
@@ -709,12 +737,13 @@
 .otp_input {
   width: 100%;
   height: 50px;
-  background-color: white;
-  border: 1.2px solid #707070;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: -3px 4px 6px -3px #0000004d;
+  box-shadow: 0px 3px 6px #00000029;
 }
 
 .bank_otp .dont_text {
@@ -744,6 +773,7 @@
   height: max-content;
   background: #f0f4fc;
   position: relative;
+  border-radius: 10px;
 }
 
 .type_box span {
@@ -782,9 +812,9 @@
   font-size: 0.8rem;
 }
 
-.payment_success .tr_details_2 > div {
+/* .payment_success .tr_details_2 > div {
   background: white;
-}
+} */
 
 .payment_success .tr_details_2 span:nth-of-type(1) {
   color: #000000;
@@ -808,11 +838,11 @@
 /* media queries */
 
 @media screen and (max-width: 1070px) {
-  .payment_success .tr_details_2 span{
+  .payment_success .tr_details_2 span {
     font-size: 0.7rem;
   }
 }
-  @media screen and (max-width: 991px) {
+@media screen and (max-width: 991px) {
   .animation_para_div {
     display: none;
   }
@@ -830,13 +860,17 @@
   .type_box img {
     top: 15px;
   }
-  .tr_details_2 > div {
-    /* flex-direction: column; */
-  }
-  .payment_success .tr_details_2 span{
-    font-size: 0.9rem;
+  .payment_success .tr_details_2 span {
+    font-size: 0.8rem;
     margin: 3px 0;
-    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .order_summary .tr_details_2 > div {
+    flex-direction: row;
+  }
+ 
 }
 
 @media screen and (max-width: 425px) {
@@ -857,6 +891,11 @@
   }
 }
 
+@media screen and (max-width: 400px) {
+  .ps_input1 .pay_cards {
+    width: 130px;
+  }
+}
 @media screen and (max-width: 380px) {
   .tr_details_2 span {
     font-size: 0.8rem;
@@ -869,6 +908,9 @@
   }
   .pm_hr span {
     font-size: 0.8rem;
+  }
+  .type_box span {
+    font-size: 0.7rem;
   }
 }
 
