--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
 /* @media (prefers-reduced-motion: no-preference) {
   .airplane {
@@ -7,26 +8,41 @@
 
 @keyframes App-logo-spin {
   from {
-    transform:translate(0px,0px);
+    transform: translate(0px, 0px);
   }
   to {
-    transform: translate(550px,-300px);
+    transform: translate(550px, -300px);
   }
 } */
 
-input , select,textarea{
-  box-shadow: inset 0 1px 2px rgba(83, 83, 83, 0.39), 0 -1px 0px #FFF, 0 1px 0 #FFF;
+input,
+select,
+textarea {
+  box-shadow: inset 0 1px 2px rgba(83, 83, 83, 0.39), 0 -1px 0px #fff,
+    0 1px 0 #fff;
   border-radius: 5px;
 }
-input::placeholder , select::placeholder,textarea::placeholder{
+
+input::placeholder,
+select::placeholder,
+textarea::placeholder {
   color: #7095db;
   font-weight: 300;
 }
-*{
+* {
   box-sizing: border-box;
 }
-body{
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: inherit;
 }
 
 /* cookie  */
@@ -36,16 +52,15 @@ body{
 .cokkie_main_div {
   position: fixed;
   bottom: 0px;
-  z-index: 99999;
+  z-index: 99999999;
   width: 100%;
   filter: opacity(0.9);
-  padding: 10px;
-  background-color: #748AA6;
+  padding: 20px 10px;
+  background-color: #748aa6;
   backdrop-filter: blur(10px);
-  background: #748AA6 0% 0% no-repeat padding-box;
+  background: #748aa6 0% 0% no-repeat padding-box;
   -webkit-backdrop-filter: blur(10px);
   opacity: 1;
-
 }
 
 .cross_cookie {
@@ -57,7 +72,7 @@ body{
   color: white;
   font-size: 1.5em;
 }
-.cross_cookie:hover{
+.cross_cookie:hover {
   cursor: pointer;
 }
 .cokkie_div {
@@ -70,35 +85,32 @@ body{
   width: 82%;
   margin-left: 20px;
   font-size: 0.9rem;
-  margin-top: 10px;
   color: white;
   font: normal normal 300 16px/25px Poppins;
-
 }
 .cokkie_para > p {
   margin-bottom: 0px;
   font-size: 0.8rem;
 }
-.cokkie_btn_div{
+.cokkie_btn_div {
   margin-top: 10px;
 }
-.m-l{
+.m-l {
   margin-left: 10px;
 }
 .cokkie_btn_div > button {
   /* margin-left: 10px; */
   border: none;
   outline: none;
-  padding: 6px 20px;
+  padding: 8px 20px;
   border-radius: 5px;
-  color: #2E58A6;
-  
-  
+  color: #2e58a6;
 }
-.cus_btn2{
-  background: #FFFFFF 0% 0% no-repeat padding-box;
+.cus_btn2 {
+  padding: 9px 5px !important;
+  width: 120px;
+  background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px #00000029;
-
 }
 .cokkie_white {
   border-radius: 3px;
@@ -107,6 +119,12 @@ body{
 }
 .cokkie_grn {
   border-radius: 3px;
+}
+
+@media screen and (min-width: 1550px) {
+  .cokkie_para > p {
+    font-size: 1.1rem;
+  }
 }
 
 @media screen and (max-width: 1144px) {
@@ -122,7 +140,6 @@ body{
     font-size: 0.8rem;
   }
 }
-
 
 @media screen and (max-width: 904px) {
   .cokkie_main_div {
@@ -149,9 +166,6 @@ body{
   }
   .cokkie_img {
     width: 100px;
-  }
-  .cokkie_main_div {
-    padding: 5px;
   }
 }
 
