--- a/src/Components/Style/Chat.css
+++ b/src/Components/Style/Chat.css
@@ -18,7 +18,7 @@
     border-radius: 7px;
     box-shadow: 0px 0px 5px gainsboro;
     /* display: none; */
-    height: 60vh;
+    /* height: 60vh; */
   }
   .chatbox_md:hover > .helpChat_div {
     display: block;
@@ -56,7 +56,7 @@
     padding: 10px 5px;
     padding-left: 5px;
     padding-right: 5px;
-    height: 50vh;
+    /* height: 50vh; */
     overflow: auto;
   }
   .help_msgs_div::-webkit-scrollbar {
