--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -4,7 +4,7 @@
   margin: 70px auto;
   display: flex;
   flex-direction: column;
-  
+
   justify-content: center;
   /* padding: 0px 50px; */
 }
@@ -33,7 +33,7 @@
 .about_left_content1 p {
   font-size: 0.9rem;
   text-align: start;
-  color: #2E58A6;
+  color: #2e58a6;
 }
 .about_right_content1 {
   width: 50%;
@@ -42,9 +42,9 @@
 }
 
 .about_right_content1 > img {
-  width: 80%;
+  width: 90%;
   height: 220px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .j_community {
@@ -58,28 +58,25 @@
   height: 100%;
   /* margin-top: 40px; */
 }
-.about_sec2{
+.about_sec2 {
   margin-top: 100px !important;
   width: 100%;
-  background-color: #F0F4FC;
+  background-color: #f0f4fc;
   height: max-content;
   padding: 20px 0px;
 }
 
-
 .about_left_content2 h2 {
   font-size: 2rem;
-  color: #0A1433;
+  color: #0a1433;
   font-weight: bold;
   /* text-align: right; */
 }
 
- 
-
 .about_left_content2 p {
   font-size: 0.95rem;
   /* text-align: end; */
-  color: #2E58A6;
+  color: #2e58a6;
   margin-top: 10px;
 }
 .about_right_content2 {
@@ -105,9 +102,9 @@
   padding: 1rem 40px;
   margin-bottom: 4rem;
   /* background-color: #F0F4FC; */
-  border-radius: 10px;
+  border-radius: 32px;
   padding-bottom: 0px;
-  background: #F0F4FC 0% 0% no-repeat padding-box;
+  background: #f0f4fc 0% 0% no-repeat padding-box;
   padding-right: 0px;
 }
 
@@ -116,7 +113,7 @@
   height: max-content;
   margin: 0 auto;
   display: flex;
-  padding: 20px 0px;
+  padding: 0px 0px;
   border-radius: 20px;
   padding-bottom: 0px;
   align-items: center;
@@ -127,21 +124,21 @@
 }
 
 .hcb_left h4 {
-  color: #0A1433;
+  color: #0a1433;
 
   font-size: 1.6rem;
   font-weight: bold;
   margin-bottom: 1.5rem;
 }
-.sign_up_todayBtn{
-  background-color: #2E58A6;
+.sign_up_todayBtn {
+  background-color: #2e58a6;
   color: white;
   border: none;
   outline: none;
-  padding: 6px 35px;
+  padding: 10px 35px;
   border-radius: 3px;
 }
-.sign_up_todayBtn img{
+.sign_up_todayBtn img {
   margin-left: 10px;
 }
 .hcb_left p {
@@ -163,8 +160,8 @@
   font-weight: bold;
   margin-bottom: 1rem;
 }
-.blue_para{
-  color: #2E58A6;
+.blue_para {
+  color: #2e58a6;
 }
 
 .hcb_right {
@@ -176,43 +173,59 @@
 .hcb_right img {
   width: 80%;
 }
+
+@media screen and (min-width: 1500px) {
+  .hcb_left div img {
+    width: 290px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .home_commingsoon {
+    padding: 0rem 40px;
+  }
+}
+
 @media screen and (max-width: 1000px) {
-  .hc_box{
+  .hc_box {
     flex-wrap: wrap !important;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     /* padding-bottom: 0px; */
-   
   }
-  .home_commingsoon{
+  .home_commingsoon {
     width: 95%;
     margin: 30px auto;
   }
-  .home_commingsoon{
+  .home_commingsoon {
     padding-bottom: 0px;
     padding-right: 40px;
   }
-  .hcb_left{
+  .hcb_left {
     text-align: center;
     width: 100%;
     margin-top: 15px;
   }
-  .hcb_left p{
+  .hcb_left p {
     width: 100%;
   }
   .hcb_right {
     width: 100%;
     justify-content: center !important;
   }
-  .hcb_right img{
+  .hcb_right img {
     width: 50%;
-
   }
-
 }
 
 @media screen and (max-width: 768px) {
+  .about_container {
+    margin: 24px auto;
+  }
+  .about_left_content1 h4 {
+    text-align: center;
+  }
   .about_container h2,
   .about_container p {
     text-align: center;
@@ -230,8 +243,7 @@
   .about_right_content2 {
     width: 100%;
   }
-  .about_right_content1 > img
-   {
+  .about_right_content1 > img {
     width: 100%;
     height: 220px;
     object-fit: contain;
@@ -250,27 +262,30 @@
     width: 100%;
     height: 100%;
   }
-  .about_left_content2 h2{
+  .about_left_content2 h2 {
     display: none;
   }
 }
-@media screen and (max-width:600px){
-  .hcb_left h2{
+@media screen and (max-width: 600px) {
+  .hcb_left h2 {
     font-size: 1.1rem;
   }
   /* .home_commingsoon{
     width: 100%;
   } */
-  .hcb_left p{
-    font-size: .85rem;
+  .hcb_left p {
+    font-size: 0.85rem;
   }
 }
 
-@media screen and (max-width:400px){
-  .hcb_left h2{
+@media screen and (max-width: 400px) {
+  .about_container {
+    margin: 14px auto;
+  }
+  .hcb_left h2 {
     font-size: 1.1rem;
   }
-  .home_commingsoon{
+  .home_commingsoon {
     width: 100%;
     padding: 1rem 10px;
     padding-bottom: 0px;
