--- a/src/Pages/ApiDoc/ApiDoc.css
+++ b/src/Pages/ApiDoc/ApiDoc.css
@@ -1,7 +1,8 @@
 .api_doc_section {
   width: 100%;
   height: max-content;
-  margin: 1rem 0;
+  margin-top: 2px;
+  margin-bottom: 1rem;
 }
 
 .api_doc_header {
@@ -12,7 +13,7 @@
   justify-content: space-between;
   padding: 0 4rem;
   background-color: #f0f4fc;
-  margin: 1rem 0;
+  position: fixed;
 }
 
 .api_doc_header h2 {
@@ -22,12 +23,13 @@
 }
 
 .api_doc_header span {
-    font-size: 1rem;
-    font-weight: 500;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .api_doc_hero {
   width: 100%;
+  padding-top: 106px;
 }
 
 .api_container {
@@ -54,17 +56,16 @@
 
 .ad_left_list::-webkit-scrollbar {
   width: 10px;
-  /* background: #000000; */
 }
 
 .api_list_box .ps_input1 {
   background: white;
+  position: sticky;
 }
 
 .api_list {
   width: 100%;
   padding: 10px 20px;
-  /* margin: 0.5rem 0; */
   color: #000000;
   display: flex;
   align-items: center;
@@ -78,7 +79,7 @@
 
 .api_content {
   width: 100%;
-  height: 400px;
+  height: 500px;
   padding: 30px 0;
   overflow-y: auto;
 }
@@ -93,7 +94,7 @@
 
 .api_content p {
   font-size: 0.8rem;
-  color: #2E58A6;
+  color: #2e58a6;
 }
 
 .api_container .col-lg-3 {
@@ -121,7 +122,7 @@
 
 .ae_body {
   width: 100%;
-  height: 445px;
+  height: 470px;
   overflow-y: scroll;
   background: #272822;
 }
@@ -148,18 +149,40 @@
   color: #ffe600;
 }
 
-@media screen and (max-width:991px) {
+@media screen and (min-width: 1600px) {
+  .api_container {
+    width: 1300px;
+  }
+}
+
+@media screen and (max-width: 991px) {
   .api_container .col-lg-3 {
     width: 100%;
   }
+  .api_list_box,
+  .api_content,
   .api_editor {
     margin: 0 auto;
-    width: 98%;
-}
+    width: 500px;
+  }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .api_container {
     width: 90%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .api_list_box,
+  .api_content,
+  .api_editor {
+    margin: 0 auto;
+    width: 97%;
+  }
+}
+@media screen and (max-width: 425px) {
+  .api_doc_header {
+    padding: 0 2rem;
   }
 }
