--- a/src/Pages/Partners/Partners.css
+++ b/src/Pages/Partners/Partners.css
@@ -1,7 +1,19 @@
 .partner_section {
   width: 100%;
   height: max-content;
-  margin-top: 1rem;
+  margin-top: 2px;
+}
+
+.phead_top {
+  position: fixed;
+  z-index: 99999;
+  width: 100%;
+}
+
+.phead_top > div:nth-child(1) {
+  width: 100%;
+  height: 10px;
+  background-color: white;
 }
 
 .partner_header {
@@ -10,14 +22,14 @@
   background-color: #f0f4fc;
   display: flex;
   align-items: center;
-  padding-left: 8rem;
 }
 
 .partner_header h2 {
   margin: 0;
   color: #0a1433;
   font-size: 1.5rem;
-  font-weight: 600;
+  padding-left: 8rem;
+  font-weight: 700;
 }
 
 /* partner_hero */
@@ -153,6 +165,12 @@
 
 /* media queries */
 
+@media screen and (min-width: 1600px) {
+  .partner_container {
+    width: 1300px;
+  }
+}
+
 @media screen and (max-width: 1105px) {
   .started_wrapper {
     width: 85%;
@@ -175,9 +193,6 @@
   .started_arrow {
     margin: 1rem 0;
   }
-  .started_arrow img {
-    transform: rotate(90deg);
-  }
 }
 @media screen and (max-width: 900px) {
   .partner_hero div:nth-child(1) {
@@ -188,7 +203,25 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .partner_header {
+    justify-content: center;
+  }
+  .partner_header h2 {
+    padding-left: 0;
+  }
+  .started_arrow img {
+    transform: rotate(90deg);
+  }
+}
+
 @media screen and (max-width: 540px) {
+  .partner_section {
+    margin-top: 5.8rem;
+  }
+  .partner_section .phead_top {
+    top: 82px;
+  }
   .partner_hero {
     height: 54vh;
   }
